# better

./: .env_sample  .gitignore  README.md  package-lock.json  pyproject.toml  run.bat
.kiro/steering/: development_guidelines.md  did i break the project.md  django-forms-guide.md  fat models and thin views.md  running python.md  testing methodology.md  ui_guide.md
apps/better/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
apps/better/management/commands/: add_default_categories.py
apps/better/migrations/: 0001_initial.py  0002_scoreday_sleep_time_scoreday_wake_time.py  0003_targetcategory_description.py
apps/better/templates/better/: category_confirm_delete.html  category_form.html  dashboard.html  importance_management.html  target_form.html
apps/better/templates/cotton/better/: category_delete_confirm.html  category_form.html  day_navigation.html  error_message.html  importance_form.html  importance_management.html  layout.html  simple_layout.html  target_form.html  target_list.html  today_scores.html
apps/better/tests/: __init__.py  test_forms.py  test_models.py  test_signals.py  test_views.py  tests.py
dev_helpers/: dev.docker-compose.yml
onlydjango/: urls.py
onlydjango/settings/: base.py  dev.py  prod.py
onlydjango/static/css/: style.css
onlydjango/templates/cotton/: layout.html
