[project]
name = "better"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "python-dotenv>=1.0.1",
    "pytz>=2024.1",
    "gunicorn>=23.0.0",
    "django-storages[s3]>=1.14.6",
    "django-cotton>=0.9.32",
    "django-debug-toolbar>=5.2.0",
    "django-browser-reload>=1.18.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
]

[tool.ruff]
exclude = ["onlydjango/**.*"]
